# DigitalBarnFinds

./: .gitignore  CLAUDE_CONTEXT.md  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  adapter_runner_results.json  alembic.ini  pyproject.toml  requirements.txt  startup.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260314_0001_initial.py  20260315_0002_expand_car_text_fields.py  20260315_0003_enforce_source_uniqueness.py  20260315_0004_add_build_date_metadata.py  20260315_0005_add_watchlist_agent_instructions.py  20260317_0001_add_vehicle_model_sort_order.py  500f0401f2d9_add_chassis_seed_and_research_agent_.py
apps/api/fixtures/aguttes/: _manifest.json  catalog_134922_sample.json  lot_21969237.json  lot_24510161.json
apps/api/fixtures/artcurial/: _manifest.json  lot_1a.json  lot_310a.json  sale_6144_discovery.json
apps/api/fixtures/barchetta/: 0465GT.json  0513GT.json  250 GT s_n 0465GT.html  250 GTO s_n 3909GT.html  3909GT.json  9999GT_aux_media.json  _manifest.json  discovery_sample.json
apps/api/fixtures/bat/: _manifest.json  (+3 more)
apps/api/scripts/: import_chassis_seed.py
apps/api/tests/: adapter_field_audit.py  adapter_runner.py  test_auction_helpers.py  test_barchetta_encoding.py  test_bat_scraper.py  test_canonical_merge.py  test_classic_scraper.py  test_enrichment.py  test_iconic_scraper.py  test_import_by_url.py  test_lp112_scraper.py  test_mecum_osenat_scrapers.py  test_media_backfill.py  test_media_storage.py  test_research.py  test_research_agent_api.py  test_scope_and_chassis_seed_import.py
(+188 files in other folders)
